# noctis-iv-lr

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CAT  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  NOCTIS.PIF  README.md  TD.TR  WHERE  WPL.HTM  build.bat  build.sh  compiling_noctis.txt  current bin format.txt  link.bat  noctis-0.asm  reslink.sh
.github/workflows/: main.yml
doc/: CurrentBinFormat.md  Doxyfile  NCCFormat.md  OldCompileInstructions.md  SurfaceBinFormat.md  surface bin format.txt
game/: icon.svg.import  nivlr.gdextension  poly3d.material  poly3d.tres  project.godot  space.tscn
game/res/: alphabet.ncc  ext-vhcl.ncc  offsets.map  sea_wind.voc  subsound.voc
res/: BIRDY.NCC  BREATH.VOC  LCTARGET.TXT  LOGOGOES.TXT  RMTARGET.TXT  SUPPORTS.NCT  THUNDER.VOC  TICK.VOC  VOIDSCRN.TXT  WET_WIND.VOC  face.ncc  globes.map  mammal.ncc  nor_wind.voc  paratie.ncc  vehicle.ncc
res/scripts/: TEST.as
src/: ASMHacks.h  ASSEMBLY.H  ASSEMBLY.H.orig  CAST.CPP  CAST.CPP.orig  CAT.CPP  CAT.CPP.orig  CLEAN.CPP  CLEAN.CPP.orig  DELE.CPP  DELE.CPP.orig  DL.CPP  DL.CPP.orig  FAST3D.H  FAST3D.H.orig  GFX.H  GFX.H.orig  Game.cpp  Game.h  INBOX.CPP  INBOX.CPP.orig  NOCTIS-0.CPP  NOCTIS-0.CPP.orig  NOCTIS-0.H  NOCTIS-0.H.orig  NOCTIS-0.bak  NOCTIS-1.CPP  NOCTIS-1.CPP.orig  NOCTIS-D.H  NOCTIS-D.H.orig  NOCTIS.CPP  NOCTIS.CPP.orig  NOCTIS.bak  NOCTIS.ide  NOCTIS.mbt  NOCTIS.mrt  OUTBOX.CPP  OUTBOX.CPP.orig  PAR.CPP  PAR.CPP.orig  (+55 more)
src/Graphics/: Screen.cpp  Screen.h
src/Input/: Mouse.cpp  Mouse.h
src/Old/: assembly.h  clean.cpp  dele.cpp  inbox.cpp  polyvert.cpp  pri.cpp
src/goesnet/: cast.cpp  cat.cpp  osscreen.h  test.as  where.cpp
web/: nivlr.html  nivlr.js  nivlr.wasm
